<resources>
    <string name="app_name">Android test</string>

    <string name="name_of_list">What is the name of your list?</string>
    <string name="create_list">Create</string>
    <string name="task_to_add">What is the task you want to add?</string>
    <string name="add_task">Add</string>
    <string name="more">More</string>
    <string name="edit">Edit</string>
    <string name="write_something">Write something</string>
    <string name="text">text</string>
    <string name="new_text">New Text</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="go_back">Go back</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="complete_date">%1s %2d, %3d</string>

    <string name="team_hint">Enter a team name</string>
    <string name="team_button">SHOW MEMBERS</string>
    <string name="default_team_name">raywenderlich</string>
    <string name="error_retrieving_team">Error retrieving team</string>
    <string name="error_retrieving_member">Error retrieving member</string>
    <string name="error_team_name_empty">Team name cannot be empty</string>
    <string name="contentDescription_teamMemberAvatar">Team member avatar</string>

    <string name="label_name">name:</string>
    <string name="label_login">username:</string>
    <string name="label_company">company:</string>
    <string name="label_email">email:</string>
    <string name="label_type">type:</string>

    <string name="empty_members_list_for">No members found for team %1s</string>

</resources>
