<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_avatar_container_size"
        android:background="@color/colorAccent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/padding_double">

        <ImageView
            android:id="@+id/memberAvatar"
            android:layout_width="@dimen/detail_avatar_size"
            android:layout_height="@dimen/detail_avatar_size"
            android:contentDescription="@string/contentDescription_teamMemberAvatar"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/memberName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/padding_standard"
            android:textSize="@dimen/detail_name_text_size"
            tools:text="Tutan Khamon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/member_label"
                android:text="@string/label_login" />

            <TextView
                android:id="@+id/memberLogin"
                style="@style/member_info" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/member_label"
                android:text="@string/label_company" />

            <TextView
                android:id="@+id/memberCompany"
                style="@style/member_info" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/member_label"
                android:text="@string/label_email" />

            <TextView
                android:id="@+id/memberEmail"
                style="@style/member_info" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/member_label"
                android:text="@string/label_type" />

            <TextView
                android:id="@+id/memberType"
                style="@style/member_info" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
